--- a/mingw-w64-libspatialite/PKGBUILD
+++ b/mingw-w64-libspatialite/PKGBUILD
@@ -7,6 +7,7 @@ _realname=libspatialite
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=5.0.0
+pkgrel=1
 pkgdesc="SQLite extension to support spatial data types and operations (mingw-w64)"
 arch=('any')
 url="https://www.gaia-gis.it/fossil/libspatialite/index"
@@ -20,7 +21,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-geos"
          "${MINGW_PACKAGE_PREFIX}-libiconv")
 options=('strip')
 source=("https://www.gaia-gis.it/gaia-sins/${_realname}-${pkgver}.tar.gz")
-sha256sums=('88900030a4762904a7880273f292e5e8ca6b15b7c6c3fb88ffa9e67ee8a5a499')
+sha256sums=('7b7fd70243f5a0b175696d87c46dde0ace030eacc27f39241c24bac5dfac6dac')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
@@ -50,6 +51,7 @@ build() {
     --build=${MINGW_CHOST} \
     --prefix=${MINGW_PREFIX} \
     --enable-libxml2 \
+    --disable-minizip \
     --with-geosconfig="${MINGW_PREFIX}/bin/${MINGW_CHOST}-geos-config" \
     --enable-static \
     --disable-shared
