--- a/mingw-w64-libspatialite/PKGBUILD
+++ b/mingw-w64-libspatialite/PKGBUILD
@@ -6,10 +6,8 @@
 _realname=libspatialite
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-_rel=.a
-_ver=4.3.0
-pkgver=${_ver}${_rel}
-pkgrel=4
+pkgver=5.0.0
+pkgrel=1
 pkgdesc="SQLite extension to support spatial data types and operations (mingw-w64)"
 arch=('any')
 url="https://www.gaia-gis.it/fossil/libspatialite/index"
@@ -22,11 +20,11 @@ depends=("${MINGW_PACKAGE_PREFIX}-geos"
          "${MINGW_PACKAGE_PREFIX}-sqlite3"
          "${MINGW_PACKAGE_PREFIX}-libiconv")
 options=('strip')
-source=("https://www.gaia-gis.it/gaia-sins/${_realname}-${_ver}${_rel//./}.tar.gz")
-sha256sums=('88900030a4762904a7880273f292e5e8ca6b15b7c6c3fb88ffa9e67ee8a5a499')
+source=("https://www.gaia-gis.it/gaia-sins/${_realname}-${pkgver}.tar.gz")
+sha256sums=('7b7fd70243f5a0b175696d87c46dde0ace030eacc27f39241c24bac5dfac6dac')
 
 prepare() {
-  cd "${srcdir}/${_realname}-${_ver}${_rel//./}"
+  cd "${srcdir}/${_realname}-${pkgver}"
   sed -i configure.ac -e "s|mingw32|${MINGW_CHOST}|g"
 
   # Jeroen: workarounds for static proj/geos
@@ -45,15 +43,15 @@ build() {
   mkdir -p "${srcdir}/build-${MINGW_CHOST}" && cd "${srcdir}/build-${MINGW_CHOST}"
   
   # Remove CPPFLAGS for spatialite 5.0 (which should support proj6)
-  CPPFLAGS+=" -DACCEPT_USE_OF_DEPRECATED_PROJ_API_H=1"
   LIBXML2_LIBS="${XML2LIBS}" \
   LIBS="${PROJLIBS}" \
-  ../${_realname}-${_ver}${_rel//./}/configure \
+  ../${_realname}-${pkgver}/configure \
     --host=${MINGW_CHOST} \
     --target=${MINGW_CHOST} \
     --build=${MINGW_CHOST} \
     --prefix=${MINGW_PREFIX} \
     --enable-libxml2 \
+    --disable-minizip \
     --with-geosconfig="${MINGW_PREFIX}/bin/${MINGW_CHOST}-geos-config" \
     --enable-static \
     --disable-shared
