Test new staging server

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
       - name: "Upload binary package"
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ matrix.msystem }}-repo
+          name: ${{ matrix.msystem }}
           path: artifacts/
 
       - name: "Upload source package"
@@ -52,3 +52,21 @@ jobs:
         with:
           name: sources
           path: sourcepkg/
+  deploy:
+    name: Deploy to staging server
+    runs-on: ubuntu-20.04
+    needs: [build]
+    if: success() && github.ref == 'refs/heads/master'
+    steps:
+      - name: Get artifacts for deployment
+        uses: actions/download-artifact@v2
+      - id: deployment
+        name: Uploading files
+        run: |
+          ls -ltrR
+          echo ${STAGINGKEY} > ~/.ssh/id_rsa && chmod 400 ~/.ssh/id_rsa
+          echo 'put -pr .' | sftp "${STAGINGUSER}@ftp.opencpu.org:/rtools"
+          rm -f ~/.ssh/id_rsa
+        env:
+          STAGINGUSER: ${{ secrets.STAGINGUSER }}
+          STAGINGKEY: ${{ secrets.STAGINGKEY }}
