--- a/pacman.conf
+++ b/pacman.conf
@@ -65,22 +65,21 @@ LocalFileSigLevel = Optional
 # uncommented to enable the repo.
 #
 
-# The testing repositories are disabled by default. To enable, uncomment the
-# repo name header and Include lines. You can add preferred servers immediately
-# after the header, and they will be used before the default mirrors.
-
 [mingw32]
+Server = https://ftp.opencpu.org/rtools/mingw32
 Server = https://dl.bintray.com/rtools/mingw32
 Server = https://cloud.r-project.org/bin/windows/Rtools/4.0/mingw32/
 SigLevel = Optional
 
 [mingw64]
+Server = https://ftp.opencpu.org/rtools/mingw64
 Server = https://dl.bintray.com/rtools/mingw64
 Server = https://cloud.r-project.org/bin/windows/Rtools/4.0/mingw64
 SigLevel = Optional
 
 [msys]
-Server = http://ftp.acc.umu.se/mirror/msys2.org/msys/$arch/
 Server = http://repo.msys2.org/msys/$arch/
+Server = http://ftp.acc.umu.se/mirror/msys2.org/msys/$arch/
 Server = http://mirror.yandex.ru/mirrors/msys2/msys/$arch/
 Server = https://sourceforge.net/projects/msys2/msys/$arch/
+SigLevel = Never
