--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,9 +9,11 @@ jobs:
         i686:
           RTOOLS_ARCH: x86_64
           MINGW_INSTALLS: mingw32
+          MSYSTEM: MINGW32
         x86_64:
           RTOOLS_ARCH: x86_64
           MINGW_INSTALLS: mingw64
+          MSYSTEM: MINGW64
     steps:
       - powershell: |
           Import-Module '.\scripts.ps1'
@@ -21,8 +23,6 @@ jobs:
           SET PATH=c:\rtools40\usr\bin;%PATH%
           rmdir /s /Q "C:\Program Files\Boost"
           copy /y pacman.conf C:\rtools40\etc\pacman.conf
-          C:\rtools40\usr\bin\curl -OSsl "http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
-          C:\rtools40\usr\bin\pacman -U --noconfirm msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz && rm msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz
           C:\rtools40\usr\bin\pacman -Syyuu --noconfirm --ask 20
           C:\rtools40\usr\bin\pacman -Syyuu --noconfirm --ask 20
           C:\rtools40\usr\bin\pacman --noconfirm --needed -S git ca-certificates
@@ -34,6 +34,7 @@ jobs:
           BINTRAY_TARGET: rtools
           BINTRAY_REPOSITORY: $(MINGW_INSTALLS)
           PACMAN_REPOSITORY: $(MINGW_INSTALLS)
+
       - task: PublishPipelineArtifact@1
         displayName: Storing artifacts
         inputs:
