--- a/mingw-w64-coinor-cbc/PKGBUILD
+++ b/mingw-w64-coinor-cbc/PKGBUILD
@@ -12,6 +12,7 @@ license=('EPL-2.0')
 source=("https://www.coin-or.org/download/source/${_realname}/${_realname}-${pkgver}.tgz")
 sha256sums=('da1a945648679b21ba56b454b81e939451dc7951d9beb3c3e14f18f64dde6972')
 groups=("rtools-coinor-cbc")
+makedepends=("${MINGW_PACKAGE_PREFIX}-gcc-fortran")
 
 build() {
   cd "$srcdir"/${_realname}-${pkgver}
