--- a/pacman.conf
+++ b/pacman.conf
@@ -66,16 +66,19 @@ LocalFileSigLevel = Optional
 #
 
 [mingw32]
-Server = https://ftp.opencpu.org/rtools/mingw32
-Server = https://dl.bintray.com/rtools/mingw32
+Server = https://ftp.opencpu.org/rtools/mingw32/
 Server = https://cloud.r-project.org/bin/windows/Rtools/4.0/mingw32/
 SigLevel = Optional
 
 [mingw64]
-Server = https://ftp.opencpu.org/rtools/mingw64
-Server = https://dl.bintray.com/rtools/mingw64
-Server = https://cloud.r-project.org/bin/windows/Rtools/4.0/mingw64
+Server = https://ftp.opencpu.org/rtools/mingw64/
+Server = https://cloud.r-project.org/bin/windows/Rtools/4.0/mingw64/
 SigLevel = Optional
+
+[ucrt64]
+#Server = https://ftp.opencpu.org/rtools/ucrt64/
+Server = https://repo.msys2.org/mingw/ucrt64/
+SigLevel = Never
 
 [msys]
 Server = http://repo.msys2.org/msys/$arch/
