update CI things

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,9 @@ jobs:
     strategy:
       matrix:
         include: [
-#          { msystem: ucrt64, arch: ucrt-x86_64 }
-          { msystem: mingw64, arch: x86_64 },
-          { msystem: mingw32, arch: i686 },
+          { msystem: mingw32, toolchain: i686 },
+          { msystem: mingw64, toolchain: x86_64 },
+          { msystem: ucrt64, toolchain: ucrt-x86_64 }
         ]
       fail-fast: false
     defaults:
@@ -29,29 +29,31 @@ jobs:
       - uses: msys2/setup-msys2@v2
         with:
           msystem: MSYS
-          install: git mingw-w64-${{ matrix.arch }}-toolchain
+          install: git
           update: true
 
       - name: CI-Build
-        run: MINGW_ARCH=${{ matrix.msystem }} ./ci-build.sh
+        run: ./ci-build.sh
         env:
-          BUILD_URL: dummy
-          BINTRAY_TARGET: rtools
-          BINTRAY_REPOSITORY: ${{ matrix.msystem }}
+          BUILD_URL: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+          MINGW_ARCH: ${{ matrix.msystem }}
+          MINGW_TOOLCHAIN: ${{ matrix.toolchain }}
           PACMAN_REPOSITORY: ${{ matrix.msystem }}
-          BINTRAY_PACKAGE: ${{ matrix.msystem }}
 
       - name: "Upload binary package"
         uses: actions/upload-artifact@v2
+        if: success() && matrix.msystem == 'ucrt64'
         with:
           name: ${{ matrix.msystem }}
           path: artifacts/
 
       - name: "Upload source package"
         uses: actions/upload-artifact@v2
+        if: success() && matrix.msystem == 'ucrt64'
         with:
           name: sources
           path: sourcepkg/
+
   deploy:
     name: Deploy to staging server
     runs-on: ubuntu-20.04
