--- a/pacman.conf
+++ b/pacman.conf
@@ -76,8 +76,8 @@ Server = https://cloud.r-project.org/bin/windows/Rtools/4.0/mingw64/
 SigLevel = Optional
 
 [ucrt64]
-#Server = https://ftp.opencpu.org/rtools/ucrt64/
-Server = https://repo.msys2.org/mingw/ucrt64/
+Server = https://ftp.opencpu.org/rtools/ucrt64/
+Server = https://cloud.r-project.org/bin/windows/Rtools/4.0/ucrt64/
 SigLevel = Never
 
 [msys]
