--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,15 +7,16 @@ jobs:
       maxParallel: 5
       matrix:
         i686:
-          RTOOLS_ARCH: x86_64
-          MINGW_INSTALLS: mingw32
           MINGW_ARCH: mingw32
-          MSYSTEM: MINGW32
+          PACMAN_REPOSITORY: mingw32
+          MINGW_TOOLCHAIN: i686
+          MSYSTEM: MSYS
         x86_64:
-          RTOOLS_ARCH: x86_64
-          MINGW_INSTALLS: mingw64
           MINGW_ARCH: mingw64
-          MSYSTEM: MINGW64
+          PACMAN_REPOSITORY: mingw64
+          MINGW_TOOLCHAIN: x86_64
+          MSYSTEM: MSYS
+
     steps:
       - powershell: |
           Import-Module '.\scripts.ps1'
