add patch for drmingw

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,13 +42,14 @@ jobs:
 
       - name: "Upload binary package"
         uses: actions/upload-artifact@v2
+        if: success() && (matrix.msystem == 'ucrt64' || !contains(github.event.head_commit.message, 'ucrt-only'))
         with:
           name: ${{ matrix.msystem }}
           path: artifacts/
 
       - name: "Upload source package"
         uses: actions/upload-artifact@v2
-        if: success() && matrix.msystem == 'mingw64'
+        if: success() && matrix.msystem == 'mingw64' && !contains(github.event.head_commit.message, 'ucrt-only')
         with:
           name: sources
           path: sourcepkg/
