--- a/mingw-w64-libassuan/PKGBUILD
+++ b/mingw-w64-libassuan/PKGBUILD
@@ -3,13 +3,15 @@
 _realname=libassuan
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.5.2
+pkgver=2.5.4
 pkgrel=1
 pkgdesc="A IPC library used by some GnuPG related software (mingw-w64)"
 arch=('any')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64')
 license=('GPL')
 url="https://gnupg.org/related_software/libassuan"
-depends=("${MINGW_PACKAGE_PREFIX}-libgpg-error")
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
+         "${MINGW_PACKAGE_PREFIX}-libgpg-error")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc")
 source=("https://gnupg.org/ftp/gcrypt/${_realname}/${_realname}-${pkgver}.tar.bz2"{,.sig}
         0001-fix-def-files.mingw.patch
@@ -17,11 +19,12 @@ source=("https://gnupg.org/ftp/gcrypt/${_realname}/${_realname}-${pkgver}.tar.bz
         0004-enable-gnu.mingw.patch
         0005-better-check-for-stpcpy.mingw.patch)
 #These might be signed by any of these keys https://gnupg.org/signature_key.html
-validpgpkeys=('D8692123C4065DEA5E0F3AB5249B39D24F25E3B6'
+validpgpkeys=('6DAA6E64A76D2840571B4902528897B826403ADA'
+              'D8692123C4065DEA5E0F3AB5249B39D24F25E3B6'
               '46CC730865BB5C78EBABADCF04376F3EE0856959'
               '031EC2536E580D8EA286A9F22071B08A33BD3F06'
               'D238EA65D64C67ED4C3073F28A861B1C7EFD60D9')
-sha256sums=('986b1bf277e375f7a960450fbb8ffbd45294d06598916ad4ebf79aee0cb788e7'
+sha256sums=('c080ee96b3bd519edd696cfcebdecf19a3952189178db9887be713ccbcb5fbf0'
             'SKIP'
             'b74089b88544da56bf4e6589516264b30757b9393fb8bdd916ff7c03cbba6e19'
             '14a46889fc0a9d3d8c0426983e9a467da46d95dfd77156fc343de8c598504d05'
@@ -45,7 +48,6 @@ build() {
   [ -d ${srcdir}/build-${MINGW_CHOST} ] && rm -rf ${srcdir}/build-${MINGW_CHOST}
   mkdir -p "${srcdir}/build-${MINGW_CHOST}" && cd "${srcdir}/build-${MINGW_CHOST}"
 
-  LIBS="-lws2_32" \
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
     --build=${MINGW_CHOST} \
@@ -66,4 +68,3 @@ package() {
   cd ${srcdir}/build-${MINGW_CHOST}
   make DESTDIR=${pkgdir} install
 }
-
