--- a/mingw-w64-gpgme/PKGBUILD
+++ b/mingw-w64-gpgme/PKGBUILD
@@ -9,17 +9,14 @@ pkgver=1.15.1
 pkgrel=2
 pkgdesc="A C wrapper library for GnuPG (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64')
 url="https://gnupg.org/related_software/gpgme/"
 license=('LGPL')
 depends=("${MINGW_PACKAGE_PREFIX}-glib2"
          "${MINGW_PACKAGE_PREFIX}-gnupg"
          "${MINGW_PACKAGE_PREFIX}-libassuan"
-         "${MINGW_PACKAGE_PREFIX}-libgpg-error"
-         "${MINGW_PACKAGE_PREFIX}-npth")
+         "${MINGW_PACKAGE_PREFIX}-libgpg-error")
 makedepends=("${MINGW_PACKAGE_PREFIX}-pkg-config"
              "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-qt5"
              "doxygen")
 options=('!emptydirs') # '!strip' 'debug')
 source=("https://www.gnupg.org/ftp/gcrypt/${_realname}/${_realname}-${pkgver}.tar.bz2"{,.sig}
