--- a/mingw-w64-libgpg-error/PKGBUILD
+++ b/mingw-w64-libgpg-error/PKGBUILD
@@ -7,11 +7,10 @@ pkgver=1.41
 pkgrel=3
 pkgdesc="Support library for libgcrypt (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64')
 url="https://gnupg.org"
 license=("LGPL")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc")
-depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs" "${MINGW_PACKAGE_PREFIX}-gettext")
+depends=("${MINGW_PACKAGE_PREFIX}-gettext")
 options=('staticlibs' 'strip')
 source=("https://gnupg.org/ftp/gcrypt/libgpg-error/${_realname}-${pkgver}.tar.bz2"{,.sig}
         01-mingw32-fix-potomo.mingw.patch
