--- a/mingw-w64-libssh/PKGBUILD
+++ b/mingw-w64-libssh/PKGBUILD
@@ -40,7 +40,8 @@ build() {
   [[ -d ${srcdir}/build-${MINGW_CHOST} ]] && rm -rf ${srcdir}/build-${MINGW_CHOST}
   mkdir -p ${srcdir}/build-${MINGW_CHOST} && cd ${srcdir}/build-${MINGW_CHOST}
 
-  CFLAGS+=" -DLIBSSH_STATIC"
+  # NB: building only static libs seems broken
+  # So we build both and delete the dlls below
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
     -G"MSYS Makefiles" \
@@ -49,7 +50,6 @@ build() {
     -DWITH_GSSAPI=OFF \
     -DUNIT_TESTING=OFF \
     -DBUILD_STATIC_LIB=ON \
-    -DBUILD_SHARED_LIBS=OFF \
     ../${_realname}-${pkgver}
 
   make all
@@ -63,4 +63,6 @@ check() {
 package() {
   cd "${srcdir}/build-${MINGW_CHOST}"
   make DESTDIR=${pkgdir} install
+  rm -R ${pkgdir}${MINGW_PREFIX}/bin
+  rm ${pkgdir}${MINGW_PREFIX}/lib/*.dll.a
 }
