--- a/mingw-w64-libssh/PKGBUILD
+++ b/mingw-w64-libssh/PKGBUILD
@@ -42,7 +42,6 @@ build() {
 
   # NB: building only static libs seems broken
   # So we build both and delete the dlls below
-  export LIBS="-lcrypt32 -lws2_32"
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
     -G"MSYS Makefiles" \
@@ -51,6 +50,8 @@ build() {
     -DWITH_GSSAPI=OFF \
     -DUNIT_TESTING=OFF \
     -DBUILD_STATIC_LIB=ON \
+    -DCMAKE_EXE_LINKER_FLAGS="-lcrypt32 -lws2_32" \
+    -DCMAKE_SHARED_LINKER_FLAGS="-lcrypt32 -lws2_32" \
     ../${_realname}-${pkgver}
 
   make all
