--- a/mingw-w64-gpgme/PKGBUILD
+++ b/mingw-w64-gpgme/PKGBUILD
@@ -11,8 +11,7 @@ pkgdesc="A C wrapper library for GnuPG (mingw-w64)"
 arch=('any')
 url="https://gnupg.org/related_software/gpgme/"
 license=('LGPL')
-depends=("${MINGW_PACKAGE_PREFIX}-glib2"
-         "${MINGW_PACKAGE_PREFIX}-libassuan"
+depends=("${MINGW_PACKAGE_PREFIX}-libassuan"
          "${MINGW_PACKAGE_PREFIX}-libgpg-error")
 makedepends=("${MINGW_PACKAGE_PREFIX}-pkg-config"
              "${MINGW_PACKAGE_PREFIX}-python"
@@ -63,6 +62,7 @@ build() {
 
   # mingw doxygen can't wrok with UNIX paths in doxyfile
   DOXYGEN=/usr/bin/doxygen \
+  LIBS="-lws2_32" \
   PYTHON=${MINGW_PREFIX}/bin/python3 \
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
@@ -73,8 +73,8 @@ build() {
     --disable-fd-passing \
     --disable-shared \
     --enable-static \
-    --disable-gpgsm-test \
-    --enable-w32-glib
+    --enable-languages=no \
+    --disable-gpgsm-test
 
   make
 }
