--- a/mingw-w64-libssh/PKGBUILD
+++ b/mingw-w64-libssh/PKGBUILD
@@ -45,22 +45,17 @@ build() {
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
     -G"MSYS Makefiles" \
+    -DCMAKE_C_STANDARD_LIBRARIES="-lws2_32 -lcrypt32" \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     -DCMAKE_BUILD_TYPE=Release \
     -DWITH_GSSAPI=OFF \
     -DUNIT_TESTING=OFF \
     -DBUILD_STATIC_LIB=ON \
-    -DCMAKE_EXE_LINKER_FLAGS="-lcrypt32 -lws2_32" \
-    -DCMAKE_SHARED_LINKER_FLAGS="-lcrypt32 -lws2_32" \
     ../${_realname}-${pkgver}
 
   make all
 }
 
-check() {
-  cd "${srcdir}/build-${MINGW_CHOST}"
-  make test
-}
 
 package() {
   cd "${srcdir}/build-${MINGW_CHOST}"
