--- a/mingw-w64-cmake/PKGBUILD
+++ b/mingw-w64-cmake/PKGBUILD
@@ -16,12 +16,14 @@ source=("https://github.com/Kitware/CMake/releases/download/v${pkgver}/${_realna
         "0001-Disable-response-files-for-MSYS-Generator.patch"
         "0002-Do-not-install-Qt-bundle-in-cmake-gui.patch"
         "0003-pkg-config-Add-dont-define-prefix-when-PKG_CONFIG_WI.patch"
-        "0004-Output-line-numbers-in-callstacks.patch")
+        "0004-Output-line-numbers-in-callstacks.patch"
+        "legacy-mingw32.patch")
 sha256sums=('3f1808b9b00281df06c91dd7a021d7f52f724101000da7985a401678dfe035b0'
             '25793edcbac05bb6d17fa9947b52ace4a6b5ccccf7758e22ae9ae022ed089061'
             'f6cf6a6f2729db2b9427679acd09520af2cd79fc26900b19a49cead05a55cd1a'
             '969b666b138338ca69be6668410b523ee1180cb163561f063b9d7764dc34d613'
-            '15fdf3fb1a0f1c153c8cfbdd2b5c64035b7a04de618bfe61d7d74ced0d6a5c4b')
+            '15fdf3fb1a0f1c153c8cfbdd2b5c64035b7a04de618bfe61d7d74ced0d6a5c4b'
+            'SKIP')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -50,6 +52,10 @@ prepare() {
     0002-Do-not-install-Qt-bundle-in-cmake-gui.patch \
     0003-pkg-config-Add-dont-define-prefix-when-PKG_CONFIG_WI.patch \
     0004-Output-line-numbers-in-callstacks.patch
+
+  if [ "$CARCH" == "i686" ]; then
+  apply_patch_with_msg legacy-mingw32.patch
+  fi
 }
 
 
