--- a/mingw-w64-qpdf/PKGBUILD
+++ b/mingw-w64-qpdf/PKGBUILD
@@ -2,7 +2,7 @@
 
 _realname=qpdf
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=8.0.0 
+pkgver=10.1.0
 pkgrel=9100
 pkgdesc="QPDF is a program that does structural, content-preserving transformations on PDF files (mingw-w64)"
 arch=('any')
@@ -13,18 +13,16 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
 depends=("${MINGW_PACKAGE_PREFIX}-libjpeg"
          "${MINGW_PACKAGE_PREFIX}-pcre"
          "${MINGW_PACKAGE_PREFIX}-zlib")
-source=("http://sourceforge.net/projects/${_realname}/files/${_realname}/${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "0001-fix-printf-on-mingw-w64.patch"
+source=(https://github.com/qpdf/qpdf/releases/download/release-${_realname}-${pkgver}/${_realname}-${pkgver}.tar.gz
         "0002-enable-advapi32-mingw.patch"
         "0003-install-rule.patch")
-md5sums=('a82d77f248de768478f3a8da2eaa693e'
-         'f5d252e8aa12c68acf294306137d2375'
-         '6cf1076ecbba51a8eb96dc7071b8bb77'
-         'f39aae4a6055d700ed4cecd200ba5813')
+sha512sums=('f9b22d89fc62e430e6232c840ad74d220ac9eb09d7f2dfe2c42c1c943d35b5fd25e2abec9970ac19ad7ad25dc3d95c74e68e50bad395abf815cf71c432233106'
+            '485f108e96b92e76620fcf8e3ddc350d67c5458eea0adcd6a5e11d29fa980c7d9672f832aaec644b39f57674fa505a8d5748059a6b0da027be38b1a7ed01036e'
+            '4b93c1af24d5afc84445b00563da0ab60d46654830104690e53844dc1bdb278ac39d8a059c12501f34afb31411a53e2b46f3f953e690f582e3561a9eeb9131a5')
+validpgpkeys=('C2C96B10011FE009E6D1DF828A75D10998012C7E') # Jay Berkenbilt <ejb@ql.org>
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
-  patch -p1 -i "${srcdir}/0001-fix-printf-on-mingw-w64.patch"
   patch -p1 -i "${srcdir}/0002-enable-advapi32-mingw.patch"
   patch -p1 -i "${srcdir}/0003-install-rule.patch"
 
@@ -42,7 +40,6 @@ build() {
       --target=${MINGW_CHOST} \
       --disable-test-compare-images \
       --enable-external-libs \
-      --with-windows-wordsize=${MINGW_PREFIX: -2} \
       --with-buildrules=mingw
   make
 }
