--- a/mingw-w64-qpdf/PKGBUILD
+++ b/mingw-w64-qpdf/PKGBUILD
@@ -38,6 +38,9 @@ build() {
       --build=${MINGW_CHOST} \
       --host=${MINGW_CHOST} \
       --target=${MINGW_CHOST} \
+      --disable-crypto-gnutls \
+      --disable-crypto-openssl \
+      --disable-implicit-crypto \
       --disable-test-compare-images \
       --enable-external-libs \
       --with-buildrules=mingw
