--- a/mingw-w64-qpdf/PKGBUILD
+++ b/mingw-w64-qpdf/PKGBUILD
@@ -9,10 +9,11 @@ arch=('any')
 url="http://qpdf.sourceforge.net/"
 license=("custom:Artistic-2.0")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
-             "${MINGW_PACKAGE_PREFIX}-pkg-config")
-depends=("${MINGW_PACKAGE_PREFIX}-libjpeg"
-         "${MINGW_PACKAGE_PREFIX}-pcre"
-         "${MINGW_PACKAGE_PREFIX}-zlib")
+             "${MINGW_PACKAGE_PREFIX}-pkg-config"
+             "${MINGW_PACKAGE_PREFIX}-libjpeg"
+             "${MINGW_PACKAGE_PREFIX}-openssl"
+             "${MINGW_PACKAGE_PREFIX}-pcre"
+             "${MINGW_PACKAGE_PREFIX}-zlib")
 source=(https://github.com/qpdf/qpdf/releases/download/release-${_realname}-${pkgver}/${_realname}-${pkgver}.tar.gz
         "0002-enable-advapi32-mingw.patch"
         "0003-install-rule.patch")
@@ -39,7 +40,7 @@ build() {
       --host=${MINGW_CHOST} \
       --target=${MINGW_CHOST} \
       --disable-crypto-gnutls \
-      --disable-crypto-openssl \
+      --enable-crypto-openssl \
       --disable-implicit-crypto \
       --disable-test-compare-images \
       --enable-external-libs \
