--- a/mingw-w64-qpdf/PKGBUILD
+++ b/mingw-w64-qpdf/PKGBUILD
@@ -11,7 +11,6 @@ license=("custom:Artistic-2.0")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
              "${MINGW_PACKAGE_PREFIX}-pkg-config"
              "${MINGW_PACKAGE_PREFIX}-libjpeg"
-             "${MINGW_PACKAGE_PREFIX}-openssl"
              "${MINGW_PACKAGE_PREFIX}-pcre"
              "${MINGW_PACKAGE_PREFIX}-zlib")
 source=(https://github.com/qpdf/qpdf/releases/download/release-${_realname}-${pkgver}/${_realname}-${pkgver}.tar.gz
@@ -40,8 +39,7 @@ build() {
       --host=${MINGW_CHOST} \
       --target=${MINGW_CHOST} \
       --disable-crypto-gnutls \
-      --enable-crypto-openssl \
-      --disable-implicit-crypto \
+      --disable-crypto-openssl \
       --disable-test-compare-images \
       --enable-external-libs \
       --with-buildrules=mingw
@@ -54,5 +52,5 @@ package() {
 
   # libqpdf.a is actually an import library so unusable
   rm -R ${pkgdir}${MINGW_PREFIX}/{lib,include}
-  rm ${pkgdir}${MINGW_PREFIX}/{fix-qdf,zlib-flate}.exe
+  rm ${pkgdir}${MINGW_PREFIX}/bin/{fix-qdf,zlib-flate}.exe
 }
