--- a/mingw-w64-atk/PKGBUILD
+++ b/mingw-w64-atk/PKGBUILD
@@ -22,7 +22,8 @@ build() {
   [[ -d "${srcdir}"/build-${MINGW_CHOST} ]] && rm -rf "${srcdir}"/build-${MINGW_CHOST}
   mkdir -p "${srcdir}"/build-${MINGW_CHOST} && cd "${srcdir}"/build-${MINGW_CHOST}
 
-  unset PKG_CONFIG
+  LDFLAGS="$(pkg-config --libs-only-l --static gobject-2.0)" \
+  PKG_CONFIG= \
   MSYS2_ARG_CONV_EXCL="--prefix=" \
   meson \
     --prefix=${MINGW_PREFIX} \
@@ -30,6 +31,11 @@ build() {
     -Dintrospection=false \
     ../${_realname}-${pkgver}
 
+  # Jeroen: I think this is fixed in msys2?
+  # https://github.com/msys2/MINGW-packages/commit/2e226007c3d5
+  PYTHONPATH=$(which python3)
+  PYTHONWINPATH="$(cygpath -m ${PYTHONPATH})"
+  sed -i.bak "s|${PYTHONPATH}.exe|${PYTHONWINPATH}|g" build.ninja
   ninja
 }
 
