--- a/mingw-w64-gtk2/PKGBUILD
+++ b/mingw-w64-gtk2/PKGBUILD
@@ -63,7 +63,7 @@ prepare() {
   patch -p1 -i ${srcdir}/0013_fix_mouse_events.patch
   patch -p1 -i ${srcdir}/0022-icontheme-win32-detect-SVG-files-by-extension.patch
 
-  autoreconf -fi
+  #autoreconf -fi
 }
 
 build() {
