--- a/mingw-w64-gtk2/PKGBUILD
+++ b/mingw-w64-gtk2/PKGBUILD
@@ -73,7 +73,7 @@ build() {
   [[ -d ${srcdir}/build-${MINGW_CHOST} ]] && rm -rf ${srcdir}/build-${MINGW_CHOST}
   mkdir -p ${srcdir}/build-${MINGW_CHOST} && cd ${srcdir}/build-${MINGW_CHOST}
 
-  export LIBS="$(pkg-config --libs-only-l --static gio-2.0 gthread-2.0) -lgdiplus -liphlpapi -ldnsapi -lgdi32"
+  export LIBS="$(pkg-config --libs-only-l --static gio-2.0 gthread-2.0) -lgdiplus -liphlpapi -ldnsapi -lgdi32 -luuid"
   ../gtk+-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
     --build=${MINGW_CHOST} \
