--- a/mingw-w64-imagemagick/PKGBUILD
+++ b/mingw-w64-imagemagick/PKGBUILD
@@ -6,7 +6,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _basever=6.9.12
 _rc=-3
 pkgver=${_basever}${_rc//-/.} # pkgver doesn't have "," "/", "-" and space.
-pkgrel=1
+pkgrel=2
 pkgdesc="An image viewing/manipulation program (mingw-w64)"
 arch=('any')
 url="https://www.imagemagick.org/"
@@ -34,8 +34,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-bzip2"
 options=('staticlibs' 'strip' '!debug' 'libtool')
 source=(https://imagemagick.org/download/releases/ImageMagick-${_basever}${_rc}.tar.xz
         6.9.11-build-fixes.patch
-        hardcode-thresholds.diff)
+        hardcode-thresholds.diff
+        https://github.com/ImageMagick/ImageMagick6/commit/2ac82aa7.diff)
 sha256sums=('SKIP'
+            'SKIP'
             'SKIP'
             'SKIP')
 #Lexie Parsimoniae (ImageMagick code signing key) <lexie.parsimoniae@imagemagick.org>
@@ -45,6 +47,7 @@ prepare() {
   cd ImageMagick-${_basever}${_rc}
   patch -p1 -i ${srcdir}/6.9.11-build-fixes.patch
   patch -p1 -i ${srcdir}/hardcode-thresholds.diff
+  patch -p1 -i ${srcdir}/2ac82aa7.diff
 }
 
 build() {
