--- a/mingw-w64-libyaml/PKGBUILD
+++ b/mingw-w64-libyaml/PKGBUILD
@@ -3,20 +3,20 @@
 _realname=libyaml
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.1.7
-pkgrel=9002
+pkgver=0.2.5
+pkgrel=1
 pkgdesc="YAML 1.1 library (mingw-w64)"
 arch=('any')
-url="http://yaml.org"
+url="https://yaml.org/"
 license=("MIT")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-pkg-config")
 options=('staticlibs' 'strip')
-source=(${_realname}-${pkgver}.tar.gz::https://github.com/yaml/libyaml/archive/${pkgver}.tar.gz
+source=("${_realname}-${pkgver}.tar.gz::https://github.com/yaml/libyaml/archive/${pkgver}.tar.gz"
         "0001-Proper-mingw-YAML_DECLARE-definition.patch"
         "0002-libyaml-no-undefined.patch")
-sha256sums=('e1884d0fa1eec8cf869ac6bebbf25391e81956aa2970267f974a9fa5e0b968e2'
-            'b3c137a1d44432edc35e571b479a0f3f0315f664c994ea147f9c4a7167a9857c'
-            '6e26d8ac24052239a1bc2db7e8d9cc28ece490a09c36479ca0209ee890ce387d')
+sha256sums=('fa240dbf262be053f3898006d502d514936c818e422afdcf33921c63bed9bf2e'
+            '101a650418d0f52cd7402a72cafe71412fb51a7d703f0f557412110c5aa395e5'
+            'abf0b4ff0b19a142aaa27e2815cd5418ce1c4d4bcab2066f5085dafe2b5cc96a')
 
 prepare() {
   cd ${srcdir}/${_realname}-${pkgver}
@@ -45,4 +45,3 @@ package() {
   cd "${srcdir}/build-${MINGW_CHOST}"
   make DESTDIR="${pkgdir}" install
 }
-
